fix spacing, capitalization errors in css files

--- a/public/stylesheets/layouts.css
+++ b/public/stylesheets/layouts.css
@@ -2,134 +2,135 @@
 /* CSS Document */
 
 body, html {
-	height:100%;
-	width:100%;
+	height: 100%;
+	width: 100%;
 	margin: 0;
 	padding: 0;
 }
 
-.col_two {
-	float:right;
-	position:relative;
+.column_two {
+	float: right;
+	position: relative;
 }
 	
 .connect {
-	position:fixed;
-	z-index:1;
-	top:215px;
-	left:-37px;
-	height:auto;
-	padding-right:25px;
+	position: fixed;
+	z-index: 1;
+	top: 215px;
+	left: -37px;
+	height: auto;
+	padding-right: 25px;
 	transition: all 1s ease-in-out;
 }
 
 .connect div.slogan {
-  -moz-transform:rotate(-90deg);
-  transform:rotate(-90deg);
-	min-width:150px;
-	position:relative;
+  -moz-transform: rotate(-90deg);
+  transform: rotate(-90deg);
+	min-width: 150px;
+	position: relative;
 }
 
 .connect img {
-	padding:5px;
+	padding: 5px;
 }
 
 .connect ul {
-	list-style:none outside none;
-	margin:0;
-	padding:0;
-	width:32px;
+	list-style: none outside none;
+	margin: 0;
+	padding: 0;
+	width: 32px;
 }
 
 .connect_indicator {
-	width:40px;
-	height:40px;
-	float:right;
+	width: 40px;
+	height: 40px;
+	float: right;
 }
 
 .connect_links {
-	float:left;
-	border-bottom-right-radius:10px;
-	padding-right:5px;
+	float: left;
+	border-bottom-right-radius: 10px;
+	padding-right: 5px;
 }
 
 .connect:hover {
-	left:0px;
+	left: 0px;
 }
 
 .container {
-	min-height:100%;
-	position:relative;
-	min-width:984px;
+	min-height: 100%;
+	position: relative;
+	min-width: 984px;
 }
 
 .content {
 	position: relative;
 	height:auto !important;
-	min-height:100%;
+	min-height: 100%;
 	top: -25px;
 	z-index: -1;
-	margin-bottom:50px;
-}
-.content_content{
-	display:block;	
-	min-width:900px;
-	max-width:900px;
-	min-height:100%;
-	height:100%;
-	margin-top:20px;
-	margin-right:auto;
-	margin-left:auto;
-	bottom:0;
-  padding:10px;
+	margin-bottom: 50px;
 }
 
-.footerCap {
-	height: 3px;
-	width: 100%;
-	top: 0px;
-	position: absolute;
+.content_content{
+	display: block;	
+	min-width: 900px;
+	max-width: 900px;
+	min-height: 100%;
+	height: 100%;
+	margin-top: 20px;
+	margin-right: auto;
+	margin-left: auto;
+	bottom: 0;
+  padding: 10px;
 }
 
 .fixed {
-	position:fixed;
-	width:100%;
+	position: fixed;
+	width: 100%;
 }
 
 .footer {
 	height: 75px;
 	bottom: 0px;
 	position: fixed;
-	width:100%;
+	width: 100%;
 }
 
 .footer .center {
-	display:block;
-	margin-left:auto;
-	margin-right:auto;
-	width:800px;
-	padding-top:20px;
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+	width: 800px;
+	padding-top: 20px;
 }
 	
 .footer .right {
-	float:right;
-	padding:10px;
-	position:absolute;
-	right:0px;
-	top:0;
+	float: right;
+	padding: 10px;
+	position: absolute;
+	right: 0px;
+	top: 0px;
 }
 
-.footerBottom {
+.footer_bottom {
 	height: 3px;
 	width: 100%;
 	bottom: 0px;
-	position:absolute;
+	position: absolute;
+}
+
+.footer_cap {
+	height: 3px;
+	width: 100%;
+	top: 0px;
+	position: absolute;
 }
 
 .footer_content{
-	display:block;	
-	margin-right:auto;
-	margin-left:auto;
+	display: block;	
+	margin-right: auto;
+	margin-left: auto;
 }
 	
 .header {
@@ -139,76 +140,77 @@ body, html {
 	top: 0px;
 }
 
-.innerFrame {
+/* not used -ehm-
+.inner_frame {
 	height: 290px;
 	width: 525px;
-	/* z-index:4; -- Not sure why this is here, leaving it j.i.c. - SD */
-	position:relative;
-}
+	position: relative;
+}*/
 
 .links_bar {
 	height: 40px;
 }
 
 .logo {
-	padding-top:10px;
+	padding-top: 10px;
 	height: 155px;
-	width:100%;
+	width: 100%;
 }
 
 .logo img {
-	display:block;
-	margin-left:auto;
-	margin-right:auto;
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
 }
 
 .nav_links {	
-	width:1004px;
-	position:relative;
-	height:35px;
+	width: 1004px;
+	position: relative;
+	height: 35px;
 	/*SD-Important for positioning*/
 	/*if any new elements are created, for the different sections, they need to be*/
 	/*wrapped in an internal div and given the attributes below*/
 	/*Element needs an explicit width to calc. auto L/R margins*/
 	/*May also need RELATIVE position*/
 	/*Works like a jello layout, only in parts*/
-	display:block;	
-	margin-right:auto;
-	margin-left:auto;
+	display: block;	
+	margin-right: auto;
+	margin-left: auto;
 }
 
 .nav_links img {
-	padding-top:3px;
-	float:left;
-	padding-right:55px;
+	padding-top: 3px;
+	float: left;
+	padding-right: 55px;
 }
 
 .nav_links img.end {
-	padding-top:3px;
-	float:left;
-	padding-right:0px;
+	padding-top: 3px;
+	float: left;
+	padding-right: 0px;
 }
 
 .nav_links li {
-	float:left;
-	padding-right:50px;
-	margin:0;
-	padding-top:5px;
+	float: left;
+	padding-right: 50px;
+	margin: 0;
+	padding-top: 5px;
 }
 
 .nav_links ul {
-	list-style:none inside none;
-	margin:0;
-	padding:0;
+	list-style: none inside none;
+	margin: 0;
+	padding: 0;
 }
 
-.ornateLeft {
+/* not used -ehm-
+.ornate_left {
 	position: absolute;
 	left: 275px;
 	top: 3px;
 }
 
-.ornateRight {
+.ornate_right {
 	position: absolute;
 	left: 935px;
 	top: 3px;
@@ -217,45 +219,45 @@ body, html {
 .pictureFrame {
 	height: 350px;
 	width: 575px;
-	position:relative;
-}
+	position: relative;
+}*/
 
 .sales_content {
-	padding:20px 0 20px 0;
-	margin-top:10px;
-	margin-bottom:10px;
-	position:relative;
-	display:block;
-	margin-right:auto;
-	margin-left:auto;
+	padding: 20px 0 20px 0;
+	margin-top: 10px;
+	margin-bottom: 10px;
+	position: relative;
+	display: block;
+	margin-right: auto;
+	margin-left: auto;
 }
 
 .sales_content .entry {
-	width:800px;
-	display:block;
-	margin-left:auto;
-	margin-right:auto;
+	width: 800px;
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
 }
 
 .sales_content .entry .left_content {
-	margin-left:400px;
+	margin-left: 400px;
 }
 
 .sales_content .entry img.clear {
-	left:-10px;
-	position:absolute;
+	left: -10px;
+	position: absolute;
 }
 
 .sales_content .entry .left_content li { 
-	padding-top:10px;
+	padding-top: 10px;
 }	
 
 .sales_content .innerhtml {
-	width:800px;
-	height:601px;
-	display:block;
-	margin-left:auto;
-	margin-right:auto;
+	width: 800px;
+	height: 601px;
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
 }
 
 #slogan2 {
@@ -270,5 +272,5 @@ body, html {
 }
 
 .top {
-	top:0;
+	top: 0px;
 }
